Fixing bug 357651. Make sure the cached window.document property outlives document.open(). r+sr=bzbarsky@mit.edu, a=pavlov@mozilla.com